objects/Flosum__Org_Permission__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Org__c</fullName>
        <label>Org</label>
        <referenceTo>Flosum__Organisation__c</referenceTo>
        <relationshipLabel>Org Permissions</relationshipLabel>
        <relationshipName>Org_Permissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Flosum__Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Release Manager</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>View Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flosum__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Org_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Org Permission</label>
    <nameField>
        <displayFormat>P-{000}</displayFormat>
        <label>Org Permission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Flosum__Must_be_Same_Owner</fullName>
        <active>true</active>
        <errorConditionFormula>Flosum__Org__r.Owner:User.Id !=   $User.Id</errorConditionFormula>
        <errorMessage>Only owner of organisation can share the record.</errorMessage>
    </validationRules>
</CustomObject>